# pendulum

./: CMakeLists.txt  README.md  dialog_window.cpp  dialog_window.h  main.cpp  main_window.cpp  main_window.h
